# In-Context-Learning-for-LLMs

./: README.md  main.py  pyproject.toml
data/: tmp71rooj9r_meta.json  tmpupxe9v1v.md  tmpupxe9v1v_meta.json  tmpvqc_65xb_meta.json  tmpwqk5n_ng_meta.json
main/: get_input.py
src/: __init__.py  app.py  data_extraction.py  response_generation.py  user_data.py
